--- a/package.json
+++ b/package.json
@@ -12,6 +12,18 @@
     "docker:rebuild:dev": "docker-compose -f docker-compose.dev.yml build",
     "docker:rebuild:prod": "docker-compose -f docker-compose.prod.yml build"
   },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "prettier --write",
+      "eslint --fix --quiet",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
@@ -28,7 +40,10 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
     "node-sass": "^4.9.0",
+    "prettier": "^1.15.3",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.21"
   }
