--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.21",
+    "vue-highlightjs": "^1.3.3",
+    "vue-js-toggle-button": "^1.3.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
