--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vue-highlightjs": "^1.3.3",
     "vue-js-toggle-button": "^1.3.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
