--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,3 +15,9 @@ services:
     tty: true
     environment:
       - CHOKIDAR_USEPOLLING=true
+    networks: 
+      - cloudhost-backend_app
+
+networks:
+  cloudhost-backend_app:
+    external: true
