--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-highlightjs": "^1.3.3",
     "vue-js-toggle-button": "^1.3.1",
     "vue-router": "^3.0.1",
+    "vue-snotify": "^3.2.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
