--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,23 +1,33 @@
-version: '3.4'
+version: '3.5'
 services:
   frontend:
     build:
       context: .
       target: modules
     image: cloudhost/frontend_development:latest
+    env_file:
+      - .env.development
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.backend=cloudhost.localhost'
+      - 'traefik.frontend.rule=Host:cloudhost.localhost'
+      - 'traefik.port=8080'
     command: npm run serve
     volumes:
       - .:/usr/app/frontend/
       - /usr/app/frontend/node_modules
     ports:
-      - "8080:8080"
+      - '8080:8080'
     stdin_open: true
     tty: true
     environment:
       - CHOKIDAR_USEPOLLING=true
-    networks: 
+    networks:
       - cloudhost-backend_app
+      - traefik
 
 networks:
   cloudhost-backend_app:
+    external: true
+  traefik:
     external: true
