fix(traefik): fix traefik config

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-# the gitlab redirect URI
-VUE_APP_GITLAB_REDIRECT_URI=
-
-# the cloudhost app id
-VUE_APP_GITLAB_APP_ID=
-
 # the backend url
-VUE_APP_BACKEN_URL=
+VUE_APP_BACKEND_URL=
+
+VUE_APP_DOMAIN=
