--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "js-cookie": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.21",
     "vue-highlightjs": "^1.3.3",
