--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "js-cookie": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "uuid": "^3.3.2",
     "vue": "^2.5.21",
     "vue-highlightjs": "^1.3.3",
     "vue-js-toggle-button": "^1.3.1",
