--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,12 +3,21 @@ services:
   frontend:
     build: .
     image: cloudhost/frontend_production:latest
-    ports:
-      - '8080:80'
-    networks: 
+    env_file:
+      - .env.development
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.backend=cloudhost-frontend'
+      - 'traefik.docker.network=traefik'
+      - 'traefik.frontend.rule=Host:cloudhost'
+      - 'traefik.port=80'
+    networks:
       - cloudhost-backend_app
+      - traefik
 
 
 networks:
   cloudhost-backend_app:
+    external: true
+  traefik:
     external: true
