build(docker): edit docker builds

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 ## DEVELOPMENT ENV FILE
 
 # the backend url
-VUE_APP_BACKEND_URL=http://api.cloudhost
+VUE_APP_BACKEND_URL=https://api.cloudhost.hsrw.eu
 
-VUE_APP_DOMAIN=http://cloudhost
+VUE_APP_DOMAIN=https://cloudhost.hsrw.eu
