--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "npm rebuild node-sass && vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build:production": "vue-cli-service build",
+    "build:staging": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up",
