--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3.5'
 services:
   frontend:
     build: .
-    image: cloudhost/frontend_production:latest
+    image: cloudhost/frontend_production:0.0.1
     labels:
       - 'traefik.enable=true'
       - 'traefik.backend=cloudhost-frontend'
