--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -4,7 +4,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.staging
-    image: cloudhost/frontend_staging:latest
+    image: cloudhost/frontend_staging:0.0.1
     labels:
       - 'traefik.enable=true'
       - 'traefik.backend=cloudhost-frontend'
