--- a/Dockerfile.staging
+++ b/Dockerfile.staging
@@ -7,7 +7,7 @@ RUN npm run build:staging
 
 FROM nginx:latest as prod
 COPY --from=build /usr/app/frontend/dist /usr/share/nginx/html
-COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/staging/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 
