--- a/nginx/prod/nginx.conf
+++ b/nginx/prod/nginx.conf
@@ -6,7 +6,7 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
   location /socket.io/ {
-    proxy_pass              http://staging.cloudhost.hsrw.eu/api;
+    proxy_pass              http://cloudhost.hsrw.eu/api;
     proxy_redirect off;
     proxy_http_version      1.1;
     proxy_set_header        Upgrade                 $http_upgrade;
@@ -15,5 +15,8 @@ server {
     proxy_set_header        X-Real-IP               $remote_addr;
     proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
   }
-
+  location /api {
+    default_type application/json;
+    return 404 '{"code":"1", "message": "Api Server not available"}';
+  }
 }
