--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@ services:
   frontend:
     build: .
     image: cloudhost/frontend_production:1.0.0
+    restart: always
     labels:
       - 'traefik.enable=true'
       - 'traefik.backend=cloudhost-frontend'
